@@ -53,6 +53,10 @@ addCoverageID = False ;Set True to print the ID of the elements not constrained 
 [summary-printer]
 expandedSummary = True ;Set True to print to file all applicable analyses, False for only the strongest result
 
+#options for slha printer
+[slha-printer]
+expandedOutput = False ; Set True to print the full list of results. If False will only print the most constraining result for non-excluded points or all the excluding results for excluded points.
+
 #options for python printer
 [python-printer]
 addElementList = False ;Set True to print full list of elements to python and xml format, False elsewise. Note that these are all elements after decomposition and the list can be very long.
