@@ -55,9 +55,13 @@ addElementInfo = False ;Set True to print a list of all elements generated by de
 printExtendedResults = False ;Set True to print detailed information about the experimental constraints, False to print a shorter version
 addCoverageID = False ;Set True to print the ID of the elements not constrained by the experimental constraints. Only used if testCoverage=True
 
-#options for summary file
+#options for summary printer
 [summary-printer]
 expandedSummary = True ;Set True to print to file all applicable analyses, False for only the strongest result
+
+#options for slha printer
+[slha-printer]
+expandedOutput = True ; Set True to print the full list of results. If False will only print the most constraining result for non-excluded points or all the excluding results for excluded points.
 
 #options for python printer
 [python-printer]
