@@ -30,6 +30,8 @@ printExtendedResults = False
 addCoverageID = False
 [summary-printer]
 expandedSummary = True
+[slha-printer]
+expandedOutput = True
 [python-printer]
 addElementList = False
 addTxWeights = False
