@@ -1,6 +1,6 @@
 BLOCK SModelS_Settings
- 0 v2.0.0                    #SModelS version
- 1 unittest200               #database version
+ 0 v2.1.0                    #SModelS version
+ 1 unittest210               #database version
  2 0.2                       #maximum condition violation
  3 1                         #compression (0 off, 1 on)
  4 5.0                       #minimum mass gap for mass compression [GeV]
@@ -17,6 +17,87 @@ BLOCK SModelS_Exclusion
  1 5 (UL)                           #signal region 
  1 6 N/A                            #Chi2
  1 7 N/A                            #Likelihood
+
+ 2 0 T2                             #txname 
+ 2 1 3.209E-01                      #r value
+ 2 2 N/A                            #expected r value
+ 2 3 0.00                           #condition violation
+ 2 4 ATLAS-SUSY-2013-02             #analysis
+ 2 5 (UL)                           #signal region 
+ 2 6 N/A                            #Chi2
+ 2 7 N/A                            #Likelihood
+
+ 3 0 T5WW                           #txname 
+ 3 1 2.800E-01                      #r value
+ 3 2 N/A                            #expected r value
+ 3 3 0.00                           #condition violation
+ 3 4 ATLAS-SUSY-2013-02             #analysis
+ 3 5 (UL)                           #signal region 
+ 3 6 N/A                            #Chi2
+ 3 7 N/A                            #Likelihood
+
+ 4 0 T1, T1tttt, T2                 #txname 
+ 4 1 1.276E-01                      #r value
+ 4 2 2.047E-01                      #expected r value
+ 4 3 0.00                           #condition violation
+ 4 4 CMS-SUS-13-012                 #analysis
+ 4 5 3NJet6_1000HT1250_600MHTinf    #signal region 
+ 4 6 6.761E-01                      #Chi2
+ 4 7 3.848E-03                      #Likelihood
+
+ 5 0 T1                             #txname 
+ 5 1 1.106E-01                      #r value
+ 5 2 N/A                            #expected r value
+ 5 3 0.00                           #condition violation
+ 5 4 CMS-PAS-SUS-15-002             #analysis
+ 5 5 (UL)                           #signal region 
+ 5 6 N/A                            #Chi2
+ 5 7 N/A                            #Likelihood
+
+ 6 0 T1                             #txname 
+ 6 1 6.118E-02                      #r value
+ 6 2 N/A                            #expected r value
+ 6 3 0.00                           #condition violation
+ 6 4 ATLAS-SUSY-2013-02             #analysis
+ 6 5 (UL)                           #signal region 
+ 6 6 N/A                            #Chi2
+ 6 7 N/A                            #Likelihood
+
+ 7 0 TChiWZ                         #txname 
+ 7 1 3.839E-02                      #r value
+ 7 2 N/A                            #expected r value
+ 7 3 0.00                           #condition violation
+ 7 4 ATLAS-SUSY-2013-12             #analysis
+ 7 5 (UL)                           #signal region 
+ 7 6 N/A                            #Chi2
+ 7 7 N/A                            #Likelihood
+
+ 8 0 T1qqtt, T1tttt                 #txname 
+ 8 1 1.830E-03                      #r value
+ 8 2 2.091E-03                      #expected r value
+ 8 3 0.00                           #condition violation
+ 8 4 ATLAS-CONF-2013-037            #analysis
+ 8 5 SRtN3                          #signal region 
+ 8 6 3.865E-01                      #Chi2
+ 8 7 2.450E-02                      #Likelihood
+
+ 9 0 T1tttt                         #txname 
+ 9 1 8.310E-04                      #r value
+ 9 2 N/A                            #expected r value
+ 9 3 0.00                           #condition violation
+ 9 4 CMS-PAS-SUS-15-002             #analysis
+ 9 5 (UL)                           #signal region 
+ 9 6 N/A                            #Chi2
+ 9 7 N/A                            #Likelihood
+
+ 10 0 T1tttt                         #txname 
+ 10 1 7.136E-05                      #r value
+ 10 2 5.496E-05                      #expected r value
+ 10 3 0.00                           #condition violation
+ 10 4 CMS-PAS-SUS-12-026             #analysis
+ 10 5 (UL)                           #signal region 
+ 10 6 N/A                            #Chi2
+ 10 7 N/A                            #Likelihood
 
 
 BLOCK SModelS_Coverage
